--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,18 +1,18 @@
-version: 1.0.{build}
+version: 2.0.{build}
 branches:
   only:
   - master
 os:
-  - Visual Studio 2015
+  - Visual Studio 2017
 assembly_info:
   patch: true
-  file: '**\AssemblyInfo.*'
+  file: '**\RuskinDantra.Extensions.csproj'
   assembly_version: '{version}'
   assembly_file_version: '{version}'
   assembly_informational_version: '{version}'
 configuration: Release
 before_build: 
-  - nuget restore Extensions.sln
+  - dotnet restore Extensions.sln
 after_build:
   - nuget pack RuskinDantra.Extensions\RuskinDantra.Extensions.nuspec -Version %appveyor_build_version%
   - appveyor PushArtifact RuskinDantra.Extensions.%appveyor_build_version%.nupkg
